# devil

./: .gitignore  Cargo.toml  Config.toml.sample  README.md  deploy.sh  devil.service
migrations/2022-01-07-005348_create_handler_entries/: down.sql  up.sql
migrations/2022-01-07-005348_create_handler_table/: up.sql
migrations/2022-01-27-055745_log_user_agent/: down.sql  up.sql
migrations/2022-02-07-182041_handler_details/: down.sql  up.sql
migrations/2022-02-09-151848_subhandler/: down.sql  up.sql
src/: configuration.rs  db.rs  handler.rs  main.rs  reporter.rs
src/db/: models.rs  schema.rs
src/handlers/: cgi_bin.rs  default.rs  envfile.rs  etc_passwd.rs  eval_stdin.rs  mod.rs  robots_bait.rs  wordpress_json.rs  wordpress_login.rs  wordpress_wlwmanifest.rs  wordpress_xmlrpc.rs
