[package]
name = "devil"
description = "A simple HTTP server, to give hackers what they want."
version = "0.4.3"
edition = "2021"
repository = "https://github.com/rstular/devil/"
authors = ["rstular <dev@rstular.eu>"]
readme = "README.md"
keywords = ["honeypot", "http", "network"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "3", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.11.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2", "network-address"] }
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
ipnetwork = "0.18.0"
lazy_static = "1.4.0"
log = "0.4.14"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rand = "0.8"
regex = "1.5"
serde = "1.0.136"
